# luckysystem

./: .gitignore  CMakeLists.txt  CMakePresets.json  LuckySystem.pro  README.md  nameinterface.cpp  nameinterface.h  personlistmanager.cpp  personlistmanager.h  rafflemode.cpp
docs/: BUILD.md
